[tool.poetry]
name = "tfresurrect"
version = "0.1.0"
description = "resurrect terraform state"
authors = ["Kapil Thangavelu <hello@stacklet.io>"]
license = "Apache 2.0"

[tool.poetry.scripts]
tfresurrect = "tfresurrect.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
c7n = "^0.9.11"
bc-python-hcl2 = "^0.3.18"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
isort = "^5.8.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
